--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -20,15 +20,28 @@
 
 <div class="jumbotron">
     <div class="container">
-        <h1>News Scraper</h1>
-        <p>Scrapes news articles and reviews from Pitchfork, a popular music website.</p>
+        <h1>Saved Articles</h1>
+        <p>View your saved articles below.</p>
     </div>
 </div>
 
 <div class="container">
     <div class="col-md-12">
-        <div class="row" id="articles">
-              
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Article Title</h3>
+                </div>
+                <div class="panel-body">
+                    <a href="#">Article Link</a>
+                    <form class="navbar-form navbar-right" method="POST" action="/saved/{{this.id}}?_method=PUT">
+                        <button type="submit" class="btn btn-danger" id="articleButton">View Comments</button>
+                    </form>
+                    <form class="navbar-form navbar-right" method="POST" action="/saved/{{this.id}}?_method=PUT">
+                        <button type="submit" class="btn btn-primary" id="articleButton">Save Article</button>
+                    </form>
+                </div>
+            </div>  
         </div>
     </div>
 </div>
