--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -27,21 +27,59 @@
 
 <div class="container">
     <div class="col-md-12">
-        <div class="row">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Article Title</h3>
+        <div class="row" id="savedArticles">
+            
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="scrapeModal" tabindex="-1" role="dialog" aria-labelledby="scrapeModalTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="scrapeModalTitle">Scrape Complete!</h5>
+            </div>
+            <div class="modal-body">
+                Article scrape complete. Please visit the homepage to view new articles.
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="commentModalTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+                <h5 class="modal-title" id="commentModalTitle">Comments</h5>
+            </div>
+            <div class="modal-body" id="commentSection">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <strong id='userName'>Example Username</strong>
+                    </div>
+                    <div id='userComment' class="panel-body">
+                        Example comment
+                    </div>
                 </div>
-                <div class="panel-body">
-                    <a href="#">Article Link</a>
-                    <form class="navbar-form navbar-right" method="POST" action="/saved/{{this.id}}?_method=PUT">
-                        <button type="submit" class="btn btn-danger" id="articleButton">View Comments</button>
-                    </form>
-                    <form class="navbar-form navbar-right" method="POST" action="/saved/{{this.id}}?_method=PUT">
-                        <button type="submit" class="btn btn-primary" id="articleButton">Save Article</button>
-                    </form>
-                </div>
-            </div>  
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <label for="usr">Name:</label>
+                            <input type="text" class="form-control" id="usr">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <label for="comment">Comment:</label>
+                            <textarea class="form-control" rows="5" id="comment"></textarea>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
         </div>
     </div>
 </div>
