--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -28,7 +28,23 @@
 <div class="container">
     <div class="col-md-12">
         <div class="row" id="savedArticles">
-            
+            {{#each article}}
+                {{#if this.saved}}
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 id='articleTitle' class="panel-title">{{this.title}}</h3>
+                        </div>
+                        <div class="panel-body">
+                            <a id='articleLink' href="{{this.link}}">{{this.link}}</a>
+                            <br>
+                            <button type="submit" class="btn btn-danger pull-right" data-toggle="modal" data-value="{{this._id}}" data-target="#commentModal" id="commentButton">View Comments</button>
+                            <form class="navbar-form pull-right" method="POST" action="/saved/{{this.id}}?_method=PUT">
+                                <a href="/delete/{{this._id}}"><button type="button" class="btn btn-primary" id="saveButton">Delete Article</button></a>
+                            </form>
+                        </div>
+                    </div>
+                {{/if}}
+            {{/each}}
         </div>
     </div>
 </div>
