--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,7 +28,21 @@
 <div class="container">
     <div class="col-md-12">
         <div class="row" id="articles">
-              
+            {{#each article}}
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 id='articleTitle' class="panel-title">{{this.title}}</h3>
+                    </div>
+                    <div class="panel-body">
+                        <a id='articleLink' href="{{this.link}}">{{this.link}}</a>
+                        <br>
+                        <button type="submit" class="btn btn-danger pull-right" data-toggle="modal" data-target="#commentModal" id="commentButton">View Comments</button>
+                        <form class="navbar-form pull-right" action="/save/{{this._id}}">
+                            <button type="submit" class="btn btn-primary" id="saveButton">Save Article</button>
+                        </form>
+                    </div>
+                </div>
+            {{/each}}
         </div>
     </div>
 </div>
@@ -56,14 +70,14 @@
                 <h5 class="modal-title" id="commentModalTitle">Comments</h5>
             </div>
             <div class="modal-body" id="commentSection">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <strong id='userName'>Example Username</strong>
+                {{#each comment}}
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <strong id='userName'>{{this.user}}</strong>
+                        </div>
+                        <div id='userComment' class="panel-body">{{this.body}}</div>
                     </div>
-                    <div id='userComment' class="panel-body">
-                        Example comment
-                    </div>
-                </div>
+                {{/each}}
                 <form class="form-horizontal">
                     <div class="form-group">
                         <div class="col-md-12">
