--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -38,8 +38,8 @@
                             <a id='articleLink' href="{{this.link}}">{{this.link}}</a>
                             <br>
                             <button type="submit" class="btn btn-danger pull-right" data-toggle="modal" data-value="{{this._id}}" data-target="#commentModal" id="commentButton">View Comments</button>
-                            <form class="navbar-form pull-right" method="POST" action="/saved/{{this.id}}?_method=PUT">
-                                <a href="/delete/{{this._id}}"><button type="button" class="btn btn-primary" id="saveButton">Delete Article</button></a>
+                            <form class="navbar-form pull-right" action="/delete/{{this._id}}">
+                                <a href="/delete/{{this._id}}"><button type="button" class="btn btn-primary" id="deleteButton">Delete Article</button></a>
                             </form>
                         </div>
                     </div>
@@ -72,14 +72,14 @@
                 <h5 class="modal-title" id="commentModalTitle">Comments</h5>
             </div>
             <div class="modal-body" id="commentSection">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <strong id='userName'>Example Username</strong>
+                {{#each comment}}
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <strong id='userName'>{{this.user}}</strong>
+                        </div>
+                        <div id='userComment' class="panel-body">{{this.body}}</div>
                     </div>
-                    <div id='userComment' class="panel-body">
-                        Example comment
-                    </div>
-                </div>
+                {{/each}}
                 <form class="form-horizontal">
                     <div class="form-group">
                         <div class="col-md-12">
