--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,7 +36,7 @@
                     <div class="panel-body">
                         <a id='articleLink' href="{{this.link}}">{{this.link}}</a>
                         <br>
-                        <button type="submit" class="btn btn-danger pull-right" data-toggle="modal" data-target="#commentModal" id="commentButton">View Comments</button>
+                        <button id="commentBtn" type="submit" class="btn btn-danger pull-right" data-toggle="modal" data-value="{{this._id}}" data-target="#commentModal" id="commentButton">View Comments</button>
                         <form class="navbar-form pull-right" action="/save/{{this._id}}">
                             <button type="submit" class="btn btn-primary" id="saveButton">Save Article</button>
                         </form>
@@ -70,7 +70,7 @@
                 <h5 class="modal-title" id="commentModalTitle">Comments</h5>
             </div>
             <div class="modal-body" id="commentSection">
-                {{#each comment}}
+                {{#each this.comment}}
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <strong>{{this.user}}</strong>
