--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">News Scraper</a>
+            <a class="navbar-brand" href="/">News Scraper</a>
         </div>
         <div class="collapse navbar-collapse" id="Navbar">
             <ul class="nav navbar-nav navbar-right">
